src/display/process_list/snapshots/dprs__display__process_list__tests__container_list_styles.snap
---
source: src/display/process_list/tests.rs
expression: output
---
"╭Docker Containers─────────────────────────────────────────────────────────────────────────────────╮"
"│                                                                                                  │"
"│>> test-container (test-image:latest)                                                             │"
"│   Status: Up 3 minutes                                                                           │"
"│   IP:     172.17.0.4                                                                             │"
"│   Ports:  8080:80/tcp                                                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
